@@ -1,5 +1,7 @@
 = HEAD
 
+* Add roda_class instance methods to RodaRequest and RodaResponse, to DRY up plugin code (jeremyevans)
+
 * Add sinatra_helpers plugin, porting Sinatra::Helpers methods not covered by other plugins (jeremyevans)
 
 * Don't set the default headers until the response is finished (jeremyevans)
